--- a/labs/Lab-1/index.html
+++ b/labs/Lab-1/index.html
@@ -9,7 +9,7 @@
     	<script src="../public/foundation.min.js"></script>
 
         <title>Lab 1: Development Environment and Server Configuration</title>
-        <link rel="stylesheet" href="../css/main.css" >
+        <link rel="stylesheet" href="../../css/app.css" >
     </head>
     <body>
       <div class="row course_header">
