--- a/header.html
+++ b/header.html
@@ -1,13 +1,13 @@
 <div class="row course_header">
   <div class="small-12 columns">
     <div class="nav">
-      <a href="http://piazza.com/illinois/fall2016/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://piazza.com/illinois/summer2017/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
       <a href="labs/">LABS &amp; MPS</a>&nbsp;&nbsp;&nbsp;
       <a href="resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
     </div>
     <div class="course_title"><a href="index.html">{{courseInfo.title}}</a></div>
     <div class="course_schedule">
-      <div class="details">&nbsp;&nbsp;&nbsp;CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FALL 2016 UIUC&nbsp;&nbsp;&nbsp;<br class="mobile-only">&nbsp;&nbsp;&nbsp;MONDAY AND WEDNESDAY&nbsp;&nbsp;&nbsp;<br class="mobile-only">&nbsp;&nbsp;&nbsp;11AM-12.15PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DCL 1310&nbsp;&nbsp;&nbsp;</div>
+      <div class="details">&nbsp;&nbsp;&nbsp;CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMMER 2017 UIUC&nbsp;&nbsp;&nbsp;<br class="mobile-only">&nbsp;&nbsp;&nbsp;MONDAY TO THURSDAY&nbsp;&nbsp;&nbsp;<br class="mobile-only">&nbsp;&nbsp;&nbsp;3.30-4.45PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIEBEL CENTER 0216&nbsp;&nbsp;&nbsp;</div>
     </div>
   </div>
 </div>
