--- a/labs/Lab-1/index.html
+++ b/labs/Lab-1/index.html
@@ -51,20 +51,20 @@
 
 <p>3 -  Clone the <a href="https://github.com/uiuc-web-programming/vagrant-dev.git">vagrant-dev repository</a> from the <a href="https://github.com/uiuc-web-programming/">class github account</a> to your machine. You are encouraged to use the command line for interacting with git and Github. So, use the following command:</p>
 
-<p><code>bash
+<p><code>
 git clone https://github.com/uiuc-web-programming/vagrant-dev.git
 </code>
 As an alternative, you can use a graphical client such as the <a href="https://mac.github.com/">Github Mac Client</a></p>
 
 <p>4 - Change to the <code>vagrant-dev</code> directory and inspect the Vagrantfile. In it we have defined what operating system we want for our virtual machine (Ubuntu in our case) and have also specified what ports of the virtual/guest machine (Ubuntu) should be forwarded to what ports of the host machine (OS X)</p>
 
-<p><code>bash
+<p><code>
 cd vagrant-dev
 </code></p>
 
 <p>5 - Boot up the virtual machine:</p>
 
-<p><code>bash
+<p><code>
 vagrant up
 </code>
 6 - SSH into the virtual machine once it has booted up:</p>
