Fixed small mistakes

--- a/labs/Lab-1/index.html
+++ b/labs/Lab-1/index.html
@@ -82,6 +82,7 @@ dos2unix install.sh **#you can skip this if you are not on a Windows machine**
 sh install.sh
 source ~/.profile
 </code>
+
 8 - Go to your github account (or create one), and create a new repository named <code>mp1</code>. <strong><em>Set it to private</em></strong> (you’ll have to activate the <a href="https://education.github.com/pack">Github student developer pack</a> to be able to create private repos. The other option is to use <a href="https://bitbucket.org/">bitbucket</a>). <a href="https://help.github.com/articles/duplicating-a-repository/">Create a duplicate</a> of the <a href="https://github.com/uiuc-web-programming/mp1_starter">MP-1 starter code</a> from the class github repo by using the commands below</p>
 
 <p><code>
@@ -92,7 +93,8 @@ git push --mirror https://github.com/your-github-username/mp1.git
 cd ..
 rm -rf mp1_starter.git
 </code>
-Then clone it to your machine and inspect the files inside by using the following commands</p>
+	
+<p>9 - Then clone it to your machine and inspect the files inside by using the following commands</p>
 
 <p><code>
 git clone https://github.com/your-github-username/mp1
