fixed top links

--- a/labs/index.html
+++ b/labs/index.html
@@ -15,8 +15,8 @@
         <div class="small-12 columns">
           <div class="nav">
             <a href="">PIAZZA</a>&nbsp;&nbsp;&nbsp;
-            <a href="labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://uiuc-web-programming.github.io/fa16/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
+            <a href="../labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
+            <a href="../resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
           <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/fa16/">The Art and Science of</a></div>
           <div class="course_title"><a href="https://uiuc-web-programming.github.io/fa16/" class="ng-binding">Web Programming</a></div>
