--- a/labs/MP-0/index.html
+++ b/labs/MP-0/index.html
@@ -39,7 +39,7 @@
 <div class="section-heading">Overview</div>
 <p>This programming assignment has two parts: 
   <ol>
-    <li> Part A: You will design and implement a simple, interactive card using only HTML, CSS, and Javascript. While the content inside the crad is upto you, the webpage should closely mirror the layout and funcationaly shown in the examples. This assignment is meant to be a very humble introduction to HTML5, CSS, and JavaScript. </li>
+    <li> Part A: You will design and implement a simple, interactive card using only HTML, CSS, and Javascript. The webpage should mirror the layout and funcationaly shown in the examples. This assignment is meant to be a very humble introduction to HTML5, CSS, and JavaScript. </li>
     <li> Part B: You will be setting up your development environment as detailed in <a href="https://uiuc-web-programming.github.io/fa2016/Lab-1">Dev Lab 1</a>. Getting this right is important and would save you from a ton of hassle in all the future MPs.</li>
   </ol>
 </p>
@@ -49,20 +49,20 @@
 <p>Your webpage will have to implement the features listed below. Note that the examples are only meant to illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form.</p>
 
 <ul>
-  <li> Part I:
+  <li> Part I: You will be using <a href="www.codepen.io">Codepen</a> for this part. You should create a new pen on codepen. 
     <ol>
-      <li>Elements: You should use at least one of the following: image, link, paragraph, heading.
+      <li>Elements: You should use at least one of all the following: image, link, paragraph, heading.
       <li>Layout: Should closely mirror the example. Everything should be centered horizontally(card, image, text, heading)</li>
-      <li>Styling: All styling must lie within styles.css</li>
-      <li>JavaScript: All your code should lie in the main.js file. </li>
-      <li>Interactions: Two interactions namely: toggling title to show/hide on clicking the name, and changing color on button press need to be present. You should have at least 3 buttons to switch colors. </li>
-      <li>The card must occupy 70% of the page height. </li>
+      <li>Styling: All styling must lie within CSS section</li>
+      <li>JavaScript: All your code should lie in the JS section </li>
+      <li>Interactions: Two interactions namely: Clicking the title/image to show/hide details, and changing color on button press need to be present. You should have at least 3 buttons to switch colors. </li>
+      <li>The card must occupy 80% of the page height when details are shown, and 30% when details are hidden. The image should have a height-width of 150px</li>
     </ol><br>
-  <li> Part II:
+  <li> Part II: You should follow instructions for Lab1 and MP1. 
     <ol>
       <li> Get MP1 starter to run </li>
-      <li> Change JS so that clicking on any div gives it a yellow background. <i><strong> hint:</strong> This is a one line change! </i> </li>
-      <li> Chanse SASS so that Hello World is centered </li>
+      <li> Change SASS inside the source_sass folder so that Hello World is centered </li>
+      <li> Add SASS to change the background color </li>
     </ol>
 
   <li> <span style="color: red"> Attention: </span> Any changes in in the public folder <strong> will not </strong> stick. </li>
@@ -74,11 +74,11 @@
 <ol>
   <li>This is an individual assignment. No collaboration is permitted.</li>
   <li>It is not permitted to copy/paste code that is not your own. You are, however, free to look at different code sources for inspiration and clarity. All sources (code as well as reading material) that you reference to complete this assignment must be declared in the submission.</li>
-  <li>There must be no use of <i> any </i> library.</li>
+  <li> There must be no use of <i> any </i> library.</li>
   <li> There should be no use of inline styling. </li>
   <li>  No inline script tags should be used.</li> 
-  <li>HTML tables cannot be used for layout.</li>
-  <li>If you think something you’re doing might not be acceptable, please ask on Piazza.</li>
+  <li> HTML tables cannot be used for layout.</li>
+  <li> If you think something you’re doing might not be acceptable, please ask on Piazza.</li>
 </ol>
 
 <div class="section-heading">Grade Breakdown</div>
