--- a/labs/MP-0/index.html
+++ b/labs/MP-0/index.html
@@ -40,7 +40,7 @@
 <p>This programming assignment has two parts: 
   <ol>
     <li> Part A: You will design and implement a simple, interactive card using only HTML, CSS, and Javascript. The webpage should mirror the layout and funcationaly shown in the examples. This assignment is meant to be a very humble introduction to HTML5, CSS, and JavaScript. </li>
-    <li> Part B: You will be setting up your development environment as detailed in <a href="https://uiuc-web-programming.github.io/fa2016/Lab-1">Dev Lab 1</a>. Getting this right is important and would save you from a ton of hassle in all the future MPs.</li>
+    <li> Part B: You will be setting up your development environment as detailed in <a href="https://uiuc-web-programming.github.io/su17/Lab-1">Dev Lab 1</a>. Getting this right is important and would save you from a ton of hassle in all the future MPs.</li>
   </ol>
 </p>
 
