--- a/labs/MP-0/index.html
+++ b/labs/MP-0/index.html
@@ -19,7 +19,7 @@
             <a href="../labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="../resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
-          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art and Science of</a></div>
+          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art of</a></div>
           <div class="course_title"><a href="https://uiuc-web-programming.github.io/su17/" class="ng-binding">Web Programming</a></div>
           <div class="course_schedule">
             <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMMER 2017 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; MONDAY TO THURSDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.30-4.45PM &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIEBEL CENTER 0216</div>
@@ -37,37 +37,37 @@
     	<p><span class="section-heading">Due Date - June 19, 11.59PM CST</span></p>
 
 <div class="section-heading">Overview</div>
-<p>This programming assignment has two parts: 
-  <ol>
-    <li> Part A: You will design and implement a simple, interactive card using only HTML, CSS, and Javascript. The webpage should mirror the layout and funcationaly shown in the examples. This assignment is meant to be a very humble introduction to HTML5, CSS, and JavaScript. </li>
-    <li> Part B: You will be setting up your development environment as detailed in <a href="https://uiuc-web-programming.github.io/su17/Lab-1">Dev Lab 1</a>. Getting this right is important and would save you from a ton of hassle in all the future MPs.</li>
-  </ol>
-</p>
+<p><ul>This programming assignment has two parts: 
+    <br> <br>
+    
+    <li><strong>Part A</strong>: You will design and implement a simple, interactive card using only HTML, CSS, and Javascript. It should look like <a href="http://imgur.com/a/yb7sY" >this</a> except with your own details.  </li>
 
-
-<div class="section-heading">Required Features</div>
-<p>Your webpage will have to implement the features listed below. Note that the examples are only meant to illustrate the features. You do not have to make you webpage look similar to the examples. You just have to incorporate that feature in some form.</p>
-
-<ul>
-  <li> Part I: You will be using <a href="www.codepen.io">Codepen</a> for this part. You should create a new pen on codepen. 
+    You will be using <a href="https://codepen.io/">Codepen</a> for this part. You will have to create a free account on codepen and then create a new pen. Write all separate parts in the right sections. 
+    <br><br>
+    Reqirements:
     <ol>
+      <li>The webpage should mirror the layout and functionality shown in the example.</li>
       <li>Elements: You should use at least one of all the following: image, link, paragraph, heading.
-      <li>Layout: Should closely mirror the example. Everything should be centered horizontally(card, image, text, heading)</li>
-      <li>Styling: All styling must lie within CSS section</li>
+      <li>Layout: Everything should be centered horizontally(card, image, text, heading)</li>
+      <li>Styling: All styling must lie within the CSS section</li>
       <li>JavaScript: All your code should lie in the JS section </li>
-      <li>Interactions: Two interactions namely: Clicking the title/image to show/hide details, and changing color on button press need to be present. You should have at least 3 buttons to switch colors. </li>
+      <li>Interactions: Two interactions namely: clicking the title/image to show/hide details, and changing color on button press need to be present. You should have at least 3 buttons to switch colors. </li>
       <li>The card must occupy 80% of the page height when details are shown, and 30% when details are hidden. The image should have a height-width of 150px</li>
-    </ol><br>
-  <li> Part II: You should follow instructions for Lab1 and MP1. 
+    </ol>
+  <br>
+
+  <li> <strong> Part B </strong>: You will be setting up your development environment as detailed in <a href="https://uiuc-web-programming.github.io/su17/Lab-1">Dev Lab 1</a>. Getting this right is important and would save you from a ton of hassle in all the future MPs.</li>
+  <br>
+  Requirements: 
     <ol>
       <li> Get MP1 starter to run </li>
       <li> Change SASS inside the source_sass folder so that Hello World is centered </li>
       <li> Add SASS to change the background color </li>
     </ol>
-
   <li> <span style="color: red"> Attention: </span> Any changes in in the public folder <strong> will not </strong> stick. </li>
-</ul>
 
+
+</p>
 
 
 <div class="section-heading">Rules</div>
@@ -80,33 +80,27 @@
   <li> HTML tables cannot be used for layout.</li>
   <li> If you think something you’re doing might not be acceptable, please ask on Piazza.</li>
 </ol>
-
+<br><br>
 <div class="section-heading">Grade Breakdown</div>
+<br>
 
-<ul>
-  <li> Part I -  2%
+
+  Part A  - 2%
     <ol>
       <li>Correct JS implementation of interactions - 50% </li>
       <li>Correct CSS implementation of layout - 50% </li>
     </ol>
-  </li>
-  <li> Part II - 1%
+  <br>
+  Part B - 1%
     <ol> 
-      <li> Changing div background on click - 50% </li>
+      <li> Changing background - 50% </li>
       <li> Centering heading - 50% </li>
     </ol>
-  </li>
-</ul>
+
+<br>
 
 <div class="section-heading">Submission Details</div>
-
-<ul> Part I:
-  <li> Commit folder named MP0 with three files: index.html, styles.css, and main.js </li>
-</ul>
-<p>Submission Link: http://uiucwp.com/mp1/submit</p>
-
-
-
+  <p> TBD </p>
 			</div>
 		</div>
 	</body>
