--- a/labs/Lab-1-Demystified/index.html
+++ b/labs/Lab-1-Demystified/index.html
@@ -17,12 +17,12 @@
           <div class="nav">
             <a href="">PIAZZA</a>&nbsp;&nbsp;&nbsp;
             <a href="labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
-            <a href="https://uiuc-web-programming.github.io/fa16/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://uiuc-web-programming.github.io/su17/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
-          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/fa16/">The Art and Science of</a></div>
-          <div class="course_title"><a href="https://uiuc-web-programming.github.io/fa16/" class="ng-binding">Web Programming</a></div>
+          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art of</a></div>
+          <div class="course_title"><a href="https://uiuc-web-programming.github.io/su17/" class="ng-binding">Web Programming</a></div>
           <div class="course_schedule">
-            <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;FALL 2016 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY AND WEDNESDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;11AM-12.15PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DCL 1310</div>
+            <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMMER 2017 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY TO THURSDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 3.30-4.45P &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIEBEL CENTER 0216</div>
           </div>
         </div>
       </div>
@@ -34,7 +34,7 @@
 
     	<div class="heading">Lab 1: Demystified</div>
 
-    	<p>The <a href="https://uiuc-web-programming.github.io/fa2016/Lab-1g">first lab</a> required you to go through a variety of steps and processes to get you ready for MP1. But you might be asking, “<em>why did we do all of those things?</em>” Well, I’m glad you asked, handsome stranger.</p>
+    	<p>The <a href="https://uiuc-web-programming.github.io/su17/Lab-1g">first lab</a> required you to go through a variety of steps and processes to get you ready for MP1. But you might be asking, “<em>why did we do all of those things?</em>” Well, I’m glad you asked, handsome stranger.</p>
 
 <p>First of all, let’s define a stack. From Webopedia:</p>
 
