--- a/labs/Lab-1/index.html
+++ b/labs/Lab-1/index.html
@@ -19,8 +19,8 @@
             <a href="../labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="../resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
-          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/fa16/">The Art and Science of</a></div>
-          <div class="course_title"><a href="https://uiuc-web-programming.github.io/fa16/" class="ng-binding">Web Programming</a></div>
+          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art of</a></div>
+          <div class="course_title"><a href="https://uiuc-web-programming.github.io/su17/" class="ng-binding">Web Programming</a></div>
           <div class="course_schedule">
             <div class="details">&nbsp;&nbsp;&nbsp;CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMMER 2017 UIUC&nbsp;&nbsp;&nbsp;<br class="mobile-only">&nbsp;&nbsp;&nbsp;MONDAY TO THURSDAY&nbsp;&nbsp;&nbsp;<br class="mobile-only">&nbsp;&nbsp;&nbsp;3.30-4.45PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIEBEL CENTER 0216&nbsp;&nbsp;&nbsp;</div>
           </div>
@@ -34,7 +34,7 @@
 
     	<div class="heading">Lab 1: Development Environment and Server Configuration</div>
 
-    	<p><span style="color: red"> Attention: </span> Please watch <a href="https://github.com/uiuc-web-programming/fa2016">this repository</a> and <a href="https://github.com/uiuc-web-programming/mp1_starter">this repository</a> on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.</p>
+    	<p><span style="color: red"> Attention: </span> Please watch <a href="https://github.com/uiuc-web-programming/su17">this repository</a> and <a href="https://github.com/uiuc-web-programming/mp1_starter">this repository</a> on Github (by clicking the watch button on the top right) to make sure you receive notifications if changes are made to the MPs or the Labs.</p>
 
 <p><span style="color: red"> Attention: </span> Please apply for <a href="https://education.github.com/pack">Github student developer pack</a> as soon as possible.</p>
 
