--- a/labs/MP-0/index.html
+++ b/labs/MP-0/index.html
@@ -36,7 +36,7 @@
 
     	<p><span class="section-heading">Due Date - June 19, 11.59PM CST</span></p>
 
-<div class="section-heading">Overview</div>
+<div class="section-heading"></div>
 <p><ul>This programming assignment has two parts: 
     <br> <br>
     
