--- a/labs/MP-2/index.html
+++ b/labs/MP-2/index.html
@@ -84,7 +84,7 @@ Each webpage in a trendset should have an explanation with your observations abo
   <li>Start from scratch – don’t borrow code from MP1. Borrowing code from MP1 will probably cause more problems and not actually save you time since most of the code will need to be rewritten.</li>
   <li>Responsiveness: Your webpage needs to be responsive and have visible changes when going from large to medium and medium to small screen sizes. These changes have to be intentional and well thought out. You will have to submit a writeup that lists these changes <strong>(at least three)</strong> and the rationale behind them.</li>
   <li>Identify aspects of the site’s visual design that could be improved: better layout, color schemes, typography etc. You will have to submit a writeup that lists these areas <strong>(at least three)</strong> and how you improved them.</li>
-  <li>You must have all the elements we asked of you in <a href="https://uiuc-web-programming.github.io/fa2016/MP-1">MP1</a> (i.e., navigation bar, carousel)</li>
+  <li>You must have all the elements we asked of you in <a href="https://uiuc-web-programming.github.io/su17/MP-1">MP1</a> (i.e., navigation bar, carousel)</li>
 </ol>
 
 <p>To improve the visual design of the web page from Part B, here are some specific things you can do:</p>
