--- a/labs/Lab-1-Demystified/index.html
+++ b/labs/Lab-1-Demystified/index.html
@@ -16,7 +16,7 @@
         <div class="small-12 columns">
           <div class="nav">
             <a href="">PIAZZA</a>&nbsp;&nbsp;&nbsp;
-            <a href="labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
+            <a href="../labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
             <a href="https://uiuc-web-programming.github.io/su17/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
           <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art of</a></div>
