--- a/labs/Lab-2-Demystified/index.html
+++ b/labs/Lab-2-Demystified/index.html
@@ -34,7 +34,7 @@
 
     	<div class="heading">Lab 2: Demystified</div>
 
-    	<p>The <a href="http://uiuc-web-programming.github.io/fa2016/Lab-2">second lab</a> is having you use Foundation, which may seem scary, since it’s a wealth of information and resources to use, but we’re here to help break it down for you.</p>
+    	<p>The <a href="http://uiuc-web-programming.github.io/su17/Lab-2">second lab</a> is having you use Foundation, which may seem scary, since it’s a wealth of information and resources to use, but we’re here to help break it down for you.</p>
 
 <p><strong>Why Foundation?</strong></p>
 
