--- a/header.html
+++ b/header.html
@@ -2,9 +2,9 @@
   <div class="small-12 columns">
     <div class="nav">
       <a href="https://piazza.com/illinois/summer2017/cs498rk">PIAZZA</a>&nbsp;&nbsp;&nbsp;
-      <a href="/su17/labs/">LABS &amp; MPS</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://uiuc-web-programming.github.io/su17/labs/">LABS &amp; MPS</a>&nbsp;&nbsp;&nbsp;
 
-      <a href="resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
+      <a href="https://uiuc-web-programming.github.io/su17/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
     </div>
     <div class="course_title"><a href="index.html">{{courseInfo.title}}</a></div>
     <div class="course_schedule">
