--- a/labs/index.html
+++ b/labs/index.html
@@ -15,11 +15,11 @@
         <div class="small-12 columns">
           <div class="nav">
             <a href="">PIAZZA</a>&nbsp;&nbsp;&nbsp;
-            <a href="../labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
-            <a href="../resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://uiuc-web-programming.github.io/su17/labs/">LABS AND MPS</a>&nbsp;&nbsp;&nbsp;
+            <a href="https://uiuc-web-programming.github.io/su17/resources.html">RESOURCES</a>&nbsp;&nbsp;&nbsp;
           </div>
-          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/fa16/">The Art of</a></div>
-          <div class="course_title"><a href="https://uiuc-web-programming.github.io/fa16/" class="ng-binding">Web Programming</a></div>
+          <div class="course_title_above"><a href="https://uiuc-web-programming.github.io/su17/">The Art of</a></div>
+          <div class="course_title"><a href="https://uiuc-web-programming.github.io/su17/" class="ng-binding">Web Programming</a></div>
           <div class="course_schedule">
             <div class="">CS498RK&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SUMMER 2017 UIUC&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;MONDAY TO THURSDAY&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.30-4.45PM&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;SIEBEL CENTER 0216</div>
           </div>
