Added slides folder

--- a/labs/MP-0/index.html
+++ b/labs/MP-0/index.html
@@ -40,13 +40,13 @@
 <p><ul>This programming assignment has two parts: 
     <br> <br>
     
-    <li><strong>Part A</strong>: You will design and implement a simple, interactive card using only HTML, CSS, and Javascript. It should look like <a href="http://imgur.com/a/yb7sY" >this</a> except with your own details.  </li>
+    <li><strong>Part A</strong>: You will design and implement a simple, interactive card using only HTML, CSS, and Javascript. It should look like <a href="https://uiuc-web-programming.github.io/su17/images/mp0.gif" >this example</a> except with your own details.  </li>
 
     You will be using <a href="https://codepen.io/">Codepen</a> for this part. You will have to create a free account on codepen and then create a new pen. Write all separate parts in the right sections. 
     <br><br>
     Reqirements:
     <ol>
-      <li>The webpage should mirror the layout and functionality shown in the example.</li>
+      <li>The webpage should mirror the layout and functionality shown in the <a href="https://uiuc-web-programming.github.io/su17/images/mp0.gif" >example</a>.</li>
       <li>Elements: You should use at least one of all the following: image, link, paragraph, heading.
       <li>Layout: Everything should be centered horizontally(card, image, text, heading)</li>
       <li>Styling: All styling must lie within the CSS section</li>
