--- a/labs/Lab-1/index.html
+++ b/labs/Lab-1/index.html
@@ -67,7 +67,7 @@ cd vagrant-dev
 <p><code>
 vagrant up
 </code>
-6 - SSH into the virtual machine once it has booted up:</p>
+<p>6 - SSH into the virtual machine once it has booted up:</p>
 
 <p><code>
 vagrant ssh
@@ -83,21 +83,25 @@ sh install.sh
 source ~/.profile
 </code>
 
-8 - Go to your github account (or create one), and create a new repository named <code>mp1</code>. <strong><em>Set it to private</em></strong> (you’ll have to activate the <a href="https://education.github.com/pack">Github student developer pack</a> to be able to create private repos. The other option is to use <a href="https://bitbucket.org/">bitbucket</a>). <a href="https://help.github.com/articles/duplicating-a-repository/">Create a duplicate</a> of the <a href="https://github.com/uiuc-web-programming/mp1_starter">MP-1 starter code</a> from the class github repo by using the commands below</p>
+<p>8 - Go to your github account (or create one), and create a new repository named <code>mp1</code>. <strong><em>Set it to private</em></strong> (you’ll have to activate the <a href="https://education.github.com/pack">Github student developer pack</a> to be able to create private repos. The other option is to use <a href="https://bitbucket.org/">bitbucket</a>). <a href="https://help.github.com/articles/duplicating-a-repository/">Create a duplicate</a> of the <a href="https://github.com/uiuc-web-programming/mp1_starter">MP-1 starter code</a> from the class github repo by using the commands below</p>
 
 <p><code>
-git clone --bare https://github.com/uiuc-web-programming/mp1_starter.git
-cd mp1_starter.git
-git push --mirror https://github.com/your-github-username/mp1.git
-# **Mirror-push to your mp1 repository. Use your github username in the URL. Change the URL if you're using bitbucket.**
+git clone --bare https://github.com/uiuc-web-programming/mp1_starter.git;
+	
+cd mp1_starter.git;
+	
+git push --mirror https://github.com/your-github-username/mp1.git; # **Mirror-push to your mp1 repository. Use your github username in the URL. Change the URL if you're using bitbucket.**
+
 cd ..
+
 rm -rf mp1_starter.git
 </code>
 	
 <p>9 - Then clone it to your machine and inspect the files inside by using the following commands</p>
 
 <p><code>
-git clone https://github.com/your-github-username/mp1
+git clone https://github.com/your-github-username/mp1;
+	
 cd mp1
 </code></p>
 
