Fixed another wild link

--- a/labs/MP-0/index.html
+++ b/labs/MP-0/index.html
@@ -56,7 +56,7 @@
     </ol>
   <br>
 
-  <li> <strong> Part B </strong>: You will be setting up your development environment as detailed in <a href="https://uiuc-web-programming.github.io/su17/Lab-1">Dev Lab 1</a>. Getting this right is important and would save you from a ton of hassle in all the future MPs.</li>
+  <li> <strong> Part B </strong>: You will be setting up your development environment as detailed in <a href="https://uiuc-web-programming.github.io/su17/labs/Lab-1">Dev Lab 1</a>. Getting this right is important and would save you from a ton of hassle in all the future MPs.</li>
   <br>
   Requirements: 
     <ol>
